# typrison

./: .gitignore  LICENSE  README.md  resources.qrc
.github/workflows/: c-cpp.yml  release.yml
typistprison/: .gitignore  CMakeLists.txt  basetextedittab.cpp  basetextedittab.h  countdowntimerwidget.cpp  countdowntimerwidget.h  customfilesystemmodel.cpp  customfilesystemmodel.h  customtabwidget.cpp  customtabwidget.h  customtreestyle.cpp  customtreestyle.h  fictiontextedit.cpp  fictiontextedit.h  fictionviewtab.cpp  fictionviewtab.h  foldertreeviewwidget.cpp  foldertreeviewwidget.h  fontmanager.cpp  fontmanager.h  fonts.qrc  functionbar.cpp  functionbar.h  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  markdownhighlighter.cpp  markdownhighlighter.h  markdownviewtab.cpp  markdownviewtab.h  plaintextedit.cpp  plaintextedit.h  plaintexthighlighter.cpp  plaintexthighlighter.h  plaintextviewtab.cpp  plaintextviewtab.h  prisonermanager.cpp  prisonermanager.h  (+8 more)
typistprison/functionbar/: customtabbar.cpp  customtabbar.h  menubutton.cpp  menubutton.h  paintcornerwidget.h  paintleftedgewidget.h  trafficbutton.h  trafficlightwidget.cpp  trafficlightwidget.h
typistprison/popups/: escapeprisonerdialog.cpp  escapeprisonerdialog.h  failedprisonerdialog.cpp  failedprisonerdialog.h  imageframe.h  instructionframe.cpp  instructionframe.h  prisonerdialog.h  readme.md  savemessagebox.cpp  savemessagebox.h  utilsprisonerdialog.cpp  utilsprisonerdialog.h  wikiframe.cpp  wikiframe.h
typistprison/utils/: ahocorasick.cpp  ahocorasick.h  closebuttonwidget.cpp  closebuttonwidget.h  colorpalette.h  contextmenuutil.h  fadeanimationutil.cpp  fadeanimationutil.h  fictionhighlighter.cpp  fictionhighlighter.h  hoverbutton.h
